--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,7 +35,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   Automation-Testing:
-    needs: sonarcloud
+    needs: SonarCloud
     runs-on: ubuntu-latest  # Runs on Ubuntu environment
 
     # Steps to execute within the job
