--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,9 +35,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   Automation-Testing:
-    needs: SonarCloud
+    needs: sonarcloud
     runs-on: ubuntu-latest  # Runs on Ubuntu environment
-
+    
     # Steps to execute within the job
     steps:
       # Step to checkout the repository code
@@ -79,7 +79,7 @@ jobs:
       #     git push
   # Single deploy job since we're just deploying
   deploy:
-    needs: automation-testing
+    needs: Automation-Testing
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
